# s7client

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
src/client/: create.rs  mod.rs  pool.rs  pooled.rs  read.rs  triggers.rs  write.rs
src/connection/: iso.rs  mod.rs  tcp.rs
src/s7_protocol/: header.rs  mod.rs  negotiate.rs  read_area.rs  types.rs  write_area.rs
src/s7_protocol/segments/: data_item.rs  header.rs  mod.rs  parameters.rs  request_item.rs
tests/: test.rs
