[package]
name = "s7client"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["net", "rt", "io-util", "time"] }
deadpool = { version = "0.9.5", features = ["managed"] }
bytes = "1.2.1"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros"] }
tokio-test = "0.4"
error-stack = "0.2"
