[package]
name = "s7client"
version = "0.3.4"
edition = "2021"
license = "MIT"
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["net", "rt", "io-util", "time"] }
bb8 = "0.8.3"
async-trait = "0.1.79"
bytes = "1.6.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros"] }
tokio-test = "0.4"
error-stack = "0.4"
